# beep-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOOK.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  SKILL.md  _meta.json  beep  beep.bat  package.json  pyproject.toml  setup.py
.clawhub/: origin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audio_announcement/: __init__.py  announce_helper.py  cli.py
audio_announcement/scripts/: announce_pygame.py
docs/: announcement-anti-forgetting.md
scripts/: announce.py  startup_check_announcement.py
tests/: __init__.py  conftest.py  test_announce_helper.py  test_cli.py  test_integration.py
