[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beep-skills"
version = "2.2.0"
description = "Real-time voice announcements for OpenClaw actions. | 实时语音播报AI的一举一动。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "miaoweilin (wililam)", email = "uinecn@126.com"}
]
keywords = ["audio", "tts", "announcement", "voice", "broadcast", "beep", "openclaw"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "edge-tts>=7.2.8",
    "pygame>=2.6.1; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/wililam/beep-skills"
Documentation = "https://github.com/wililam/beep-skills#readme"
Repository = "https://github.com/wililam/beep-skills"
Issues = "https://github.com/wililam/beep-skills/issues"

[tool.setuptools.packages.find]
include = ["audio_announcement*"]

[tool.setuptools.package-data]
"audio_announcement" = ["scripts/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
